--- a/src/views/mixins/menu.pug
+++ b/src/views/mixins/menu.pug
@@ -4,20 +4,20 @@ mixin menu(menu)
             a(href=`/menus/${menu.id}`)=menu.title
         p=menu.description
         h4 원재료들
-        small=menu.ingredients
+        ul=menu.ingredients
         h4 알레르기 목록
         ul 
             each hashtags in menu.hashtags
                 li=hashtags
-        h4 영양성분
-        small=menu.ingredients
-        small=menu.nt_calories
-        small=menu.nt_totalCarbohydrate
-        small=menu.nt_totalSugars
-        small=menu.nt_protein
-        small=menu.nt_totalFat
-        small=menu.nt_SaturatedFat
-        small=menu.nt_transFat
-        small=menu.nt_cholesterol
-        small=menu.nt_sodium
+        h4 영양성분(칼/탄/당/단/지방/포화지방/트랜스지방/콜레스테롤/나트륨)
+        ul
+            li=menu.nt_calories
+            li=menu.nt_totalCarbohydrate
+            li=menu.nt_totalSugars
+            li=menu.nt_protein
+            li=menu.nt_totalFat
+            li=menu.nt_SaturatedFat
+            li=menu.nt_transFat
+            li=menu.nt_cholesterol
+            li=menu.nt_sodium
         hr 
