--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -5,7 +5,7 @@ block content
         span=errorMessage
     form(method="POST", enctype="multipart/form-data")
         label(for="video") 가이드영상 업로드
-        input(type="file", accept="menu/*",  id="video", name="video")
+        input(type="file", accept="video/*",  id="video", name="video")
 
         label(for="menuImage") 대표이미지 업로드(아직 기능구현이 안 되었습니다. 사용금지))
         input(type="file", accept="image/*",  id="menuImage", name="menuImage")
@@ -16,6 +16,8 @@ block content
         input(placeholder="설명", required, type="text", name="description", minlength=20)
         label 알레르기 성분
         input(placeholder="','로 구분합니다.", required, type="text", name="hashtags")
+        label 원재료명
+        input(placholder="원재료들 모두 입력", required, type="text", name="ingredients")
         label 영양성분 기입
         input(placeholder="100g당 칼로리", required, type="text", name="nt_calories")
         input(placeholder="100g당 탄수화물", required, type="text", name="nt_totalCarbohydrate")
