--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -7,7 +7,7 @@ block content
         label(for="video") 가이드영상 업로드
         input(type="file", accept="video/*",  id="video", name="video")
 
-        label(for="menuImage") 대표이미지 업로드(아직 기능구현이 안 되었습니다. 사용금지))
+        label(for="menuImage") 대표이미지 업로드
         input(type="file", accept="image/*",  id="menuImage", name="menuImage")
 
         label 메뉴명
