--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,8 @@
 extends base
 
 block content
-    menu(src="/" + menu.fileUrl, controls)
+    video(src="/" + menu.fileUrl, controls,  width:400)
+    img(src="/" + menu.imgUrl)
     div
         p=menu.description
         h4 원재료들
