--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -3,7 +3,7 @@ include mixins/menu
 
 block content
     form(method="GET")
-        input(placeholder="메뉴명을 입력하세요",name="keyword", type="text")
+        input(placeholder="알레르기성분을 입력하세요",name="keyword", type="text")
         input(type="submit", value="Search now")
 
     div
