--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -6,11 +6,10 @@ block content
         span=errorMessage
     form(method="POST")
         input(placeholder="Name", name="name", type="text", required)
-        input(placeholder="Email", name="email", type="email", required)
-        input(placeholder="Username", name="username", type="text", required)
+        input(placeholder="Lastname", name="lastname", type="text", required)
+        input(placeholder="Email(로그인시 ID로 사용)", name="email", type="email", required)
         input(placeholder="Password", name="password", type="password", required)
         input(placeholder="Confirm Password", name="password2", type="password", required)
-        input(placeholder="Location", name="location", type="text", required)
         input(type="submit", value="Join")
     hr
     div
